<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dfu_unknown_name">unnamed device</string>
     <string name="qingquedingshifoudfu">no find DfuTag,Ibeacon have not DFU</string>
    <string name="dfu_action_abort">Abort</string>

    <string name="dfu_status_initializing">Initializing&#8230;</string>
    <string name="dfu_status_connecting">Connecting&#8230;</string>
    <string name="dfu_status_starting">Starting DFU&#8230;</string>
    <string name="dfu_status_switching_to_dfu">Starting bootloader&#8230;</string>
    <string name="dfu_status_uploading">Uploading&#8230;</string>
    <string name="dfu_status_uploading_part" formatted="false">Uploading part %d/%d&#8230;</string>
    <string name="dfu_status_validating">Validating&#8230;</string>
    <string name="dfu_status_disconnecting">Disconnecting&#8230;</string>
    <string name="dfu_status_completed">Done</string>
    <string name="dfu_status_aborted">Aborted</string>
    <string name="dfu_status_aborting">Aborting&#8230;</string>
    <string name="dfu_status_error">Upload failed</string>
    
    <string name="dfu_status_connecting_msg">Connecting to %s&#8230;</string>
    <string name="dfu_status_starting_msg">Initializing DFU process&#8230;</string>
    <string name="dfu_status_switching_to_dfu_msg">Waiting for bootloader&#8230;</string>
    <string name="dfu_status_uploading_components_msg">Transmitting components to %s&#8230;</string>
    <string name="dfu_status_uploading_msg">Transmitting application to %s&#8230;</string>
    <string name="dfu_status_validating_msg">Validating&#8230;</string>
    <string name="dfu_status_completed_msg">Application has been send successfully.</string>
    <string name="dfu_status_aborted_msg">Application upload has been canceled.</string>
    <string name="dfu_status_disconnecting_msg">Disconnecting from %s&#8230;</string>
    <string name="dfu_status_error_msg">DFU process failed.</string>
       <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>
      <string name="device_upload">upload</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_disconnect">DISCONNECT</string>
    
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_mcp">nRF Master Control Panel</string>
    
    <string name="batterybai">%d%%</string>
    <string name="progress">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>
    
    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>
    
    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>
    
    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>
    
       <string name="gongsi">北京智慧图</string>
    <string name="wangzhi">www.rtmap.com</string>
     <string name="gangcailianjieguole">CONN state :NO</string>
    <string name="app_name">SET_AUTO</string>
    <string name="bunengxiugai">Ready Only</string>
    <string name="temp">Temperature</string>
    <string name="about">About</string>
    <string name="connection_modetip">Tip:YES the phone and iBeacon connection .NO the phone and iBeacon not connection .normal don\'t change this value</string>
    <string name="version_name">Version:</string>
    <string name="can_not_find_version_name">Not  find</string>
    <string name="system_id">System Id</string>
    <string name="model_number">Model Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="firmware_revision">Firmware Revision</string>
    <string name="hardware_revision">Hardware Revision</string>
    <string name="software_revision">Software Revision</string>
    <string name="manufacturer_name">Manufacturer Name</string>
    <string name="regulatorycertifactiondata">Regulatory Certifaction Data</string>
    <string name="changpasswordtip1">The two password is inconsistent</string>
    <string name="changpasswordtip2">The length can only be 8 bits</string>
    <string name="changpasswortip">Tip:length of 8</string>
    <string name="intputmima">Please enter a new password</string>
    <string name="soft_reboottip">Tip:After modifying the parameters, the restart takes effect</string>
    <string name="ibeacon_nametip">Tip:Do not exceed 12 in length, not less than 1, the current length is:#</string>
    <string name="serialidtip">Tip:Numerical Range 1-99999</string>
    <string name="broadcastingtip">Tip:Broadcasting Time Low,IBeacon Broadcasting Fast,IBeacon Easy Connection,Power consumption is also greater</string>
    <string name="transimssiontip">Tip:Transimssion High,Signal coverage is greater,Power consumption is also greater</string>
    <string name="zuidi">Lowest</string>
    <string name="fugai"></string>
    <string name="mi">M</string>
    <string name="power"></string>
    <string name="dang"></string>
    <string name="shijinzi">Decimal</string>
    <string name="majortip">Tip:Numerical Range 0-65535</string>
    <string name="measured_powertip">Tip:Usually -55 and -59。Not professionals, do not recommend to modify this value。</string>
    <string name="shiliujinzi">Hexadecimal(0x)</string>
    <string name="airlocate">AirLocate</string>
    <string name="inputnumber">Please enter a number</string>
    <string name="weixin">wechar</string>
    <string name="estimote">Estimote</string>
    <string name="save">Save</string>
    <string name="config">Config</string>
    <string name="batterytext">Battery</string>
    <string name="device_information">Device Information</string>
    <string name="broadcasting_interval">Broadcasting Interval</string>
    <string name="serial_id">Serial Id</string>
    <string name="ibeacon_name">iBeacon Name</string>
    <string name="connection_mode">Connection Mode</string>
    <string name="soft_reboot">Reboot IBeacon</string>
    <string name="uuid">UUID</string>
    <string name="measured_power">Measured Distance</string>
    <string name="transimssion_power">Transimssion Power</string>
    <string name="change_password">Change password</string>
    <string name="connect_failed">Failed to connect,   refresh</string>
    <string name="major">MAJOR</string>
    <string name="minor">MINOR</string>
    <string name="mac">MAC:</string>
    <string name="search">Searching....</string>
    <string name="device_list">devices</string>
    <string name="rssi">RSSI</string>
    <string name="connecting">connectionning:</string>
    <string name="conn">CONN</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">    ManufactureId</string>
    <string name="BatteryLevel">    Battery Level</string>
    <string name="OrgId">    OrganizationId</string>
    <string name="Txpower">    Txpower Level</string>
    <string name="Noupdate">    No Update</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Sign out?</string>
    <string name="popup_message">Are you Sure Sign out?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_open">Bluetooth did not open</string>
    <string name="ble_not_supported">Bluetooth is not supported IBeacon</string>
    <string name="scan">Scan</string>

</resources>